k8s/colossus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colossus-data-deployment
  labels:
    app: colossus
spec:
  selector:
    matchLabels:
      app: colossus
  replicas: 3
  template:
    metadata:
      labels:
        app: colossus
    spec:
      containers:
        - name: colossus-data
          image: bazel:colossus-data
          imagePullPolicy: Never
          ports:
          - containerPort: 1111
---
apiVersion: v1
kind: Service
metadata:
  name: colossus-data-svc
spec:
  selector:
    app: colossus
  ports:
  - name: http
    protocol: TCP
    port: 1111
    targetPort: 1111
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colossus-auth-deployment
  labels:
    app: colossus
spec:
  selector:
    matchLabels:
      app: colossus
  replicas: 3
  template:
    metadata:
      labels:
        app: colossus
    spec:
      containers:
        - name: colossus-auth
          image: bazel:colossus-auth
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: colossus-auth-svc
spec:
  selector:
    app: colossus
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colossus-userinfo-deployment
  labels:
    app: colossus
spec:
  selector:
    matchLabels:
      app: colossus
  replicas: 3
  template:
    metadata:
      labels:
        app: colossus
    spec:
      containers:
        - name: colossus-userinfo
          image: bazel:colossus-userinfo
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: colossus-userinfo-svc
spec:
  selector:
    app: colossus
  ports:
    - name: http
      protocol: TCP
      port: 7777
      targetPort: 7777
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colossus-web-deployment
  labels:
    app: colossus
spec:
  selector:
    matchLabels:
      app: colossus
  replicas: 3
  template:
    metadata:
      labels:
        app: colossus
    spec:
      containers:
        - name: colossus-web
          image: bazel:colossus-web
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: colossus-web-svc
spec:
  selector:
    app: colossus
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colossus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: colossus-web-svc
            port:
              number: 3000
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: busybox
# spec:
#   containers:
#   - name: busybox
#     image: busybox
#     args:
#     - sh
#     - -c
#     - tail -f /dev/null
